fix: footer spacing and brand images spacing

--- a/assets/amarena.scss
+++ b/assets/amarena.scss
@@ -149,6 +149,9 @@ a, a:hover {
   bottom: 0px;
   z-index: 4;
 }
+.diversity{
+  letter-spacing: 3px;
+}
 .moveme {
   animation-delay: 3s;
   animation-name: moveme;
